<resources>
    <string name="app_name">SlamBookVidhi</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_hobby">Enter Hobby</string>
    <string name="submit_button">Save to Slam Book</string>
    <string name="view_friends_button">View Friends</string>
    <string name="main_title">My Slam Book</string>
</resources>