<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/screen_padding"
    android:orientation="vertical"
    android:background="#FFE4F3">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="#472836"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo1"
        android:layout_gravity="center"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtname"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtdob"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_of_birth"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtnumber"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_mobile_number"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edthobby"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_hobby"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnsave"
        android:background="#FF92C2"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFriendList"
        android:background="#FF92C2"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:text="@string/view_friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</androidx.appcompat.widget.LinearLayoutCompat>